--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -1,16 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/v1/calcAndSearch/(.*)",
-        "dest": "src/routes/calcAndSearch.routes.js"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    },
+    {
+      "src": "/api/v1/calcAndSearch/(.*)",
+      "dest": "src/routes/calcAndSearch.routes.js"
+    }
+  ]
+}
