--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/src/routes/calcAndSearch.routes.js"
     },
     {
       "src": "/api/v1/calcAndSearch/(.*)",
