--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,12 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/backend/app.js"
-    },
-    {
-      "src": "/hero(.*)",
-      "dest": "/backend/app.js"
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     }
   ]
 }
