--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/backend/api/$1"
+      "src": "/api/v1/calcAndSearch/(.*)",
+      "dest": "/backend/src/routes/calcAndSearch.routes.js"
     }
   ]
 }
